@@ -2,6 +2,7 @@
 
 	* seahorse-key-manager-store.c: Fix problems with showing wrong 
 	columns (bug# 156167)
+	* seahorse-key-store.c: Fix sorting again after above change
 	
 2004-10-20  Nate Nielsen <nielsen@memberwebs.com>
 
